--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-native": "0.71.7",
     "react-native-fast-image": "^8.6.3",
     "react-native-game-engine": "^1.2.0",
-    "react-native-reanimated": "^3.1.0"
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.1.0",
+    "react-native-video": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
